--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,14 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "@plumier/mongoose": "canary",
-    "@plumier/serve-static": "canary",
-    "@plumier/social-login": "canary",
+    "@plumier/mongoose": "1.0.0-canary.37",
+    "@plumier/serve-static": "1.0.0-canary.37",
+    "@plumier/social-login": "1.0.0-canary.37",
     "@types/dotenv": "^6.1.1",
     "@types/jsonwebtoken": "^8.3.4",
     "dotenv": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
-    "plumier": "canary"
+    "plumier": "1.0.0-canary.37"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
