--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,6 +7,7 @@
         "@types/node": "12.7.8",
         "@types/react": "16.9.3",
         "@types/react-dom": "16.9.1",
+        "@project/core": "1.0.0",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-scripts": "3.1.2",
