--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,11 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@plumier/jwt": "1.0.0-canary.37",
     "@plumier/mongoose": "1.0.0-canary.37",
     "@plumier/serve-static": "1.0.0-canary.37",
     "@plumier/social-login": "1.0.0-canary.37",
+    "@types/bcrypt": "^3.0.0",
     "@types/dotenv": "^6.1.1",
     "@types/jsonwebtoken": "^8.3.4",
+    "bcrypt": "^3.0.6",
     "dotenv": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
     "plumier": "1.0.0-canary.37"
