--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,11 +7,13 @@
         "@types/node": "12.7.8",
         "@types/react": "16.9.3",
         "@types/react-dom": "16.9.1",
+        "@types/react-router-dom": "^5.1.0",
+        "axios": "0.19.0",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
+        "react-router-dom": "^5.1.2",
         "react-scripts": "3.1.2",
-        "typescript": "3.6.3",
-        "axios": "0.19.0"
+        "typescript": "3.6.3"
     },
     "scripts": {
         "start": "react-scripts start",
