--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb://localhost:27017/todo
 
-JWT_SECRET=
+JWT_SECRET=lorem ipsum dolor sit amet
 
 # facebook social login info
 FACEBOOK_CLIENT_ID=
