--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,14 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "@plumier/mongoose": "1.0.0-canary.37",
-    "@plumier/serve-static": "1.0.0-canary.37",
-    "@plumier/social-login": "1.0.0-canary.37",
+    "@plumier/jwt": "1.0.0-canary.41",
+    "@plumier/mongoose": "1.0.0-canary.41",
+    "@plumier/serve-static": "1.0.0-canary.41",
+    "@plumier/social-login": "1.0.0-canary.41",
+    "@types/bcrypt": "^3.0.0",
     "@types/dotenv": "^6.1.1",
     "@types/jsonwebtoken": "^8.3.4",
+    "bcrypt": "^3.0.6",
     "dotenv": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
-    "plumier": "1.0.0-canary.37"
+    "plumier": "1.0.0-canary.41"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
