--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,17 +9,19 @@
     "test": "jest"
   },
   "dependencies": {
-    "@plumier/jwt": "1.0.0-dev.7",
-    "@plumier/mongoose": "1.0.0-dev.7",
-    "@plumier/serve-static": "1.0.0-dev.7",
-    "@plumier/social-login": "1.0.0-dev.7",
+    "@plumier/jwt": "1.0.0-dev.9",
+    "@plumier/mongoose": "1.0.0-dev.9",
+    "@plumier/serve-static": "1.0.0-dev.9",
+    "@plumier/social-login": "1.0.0-dev.9",
     "@types/bcrypt": "^3.0.0",
+    "@types/csrf": "^1.3.2",
     "@types/dotenv": "^6.1.1",
     "@types/jsonwebtoken": "^8.3.4",
     "bcrypt": "^3.0.6",
+    "csrf": "^3.1.0",
     "dotenv": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
-    "plumier": "1.0.0-dev.7"
+    "plumier": "1.0.0-dev.9"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
