--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,28 +9,28 @@
     "test": "jest"
   },
   "dependencies": {
-    "@plumier/jwt": "1.0.0-rc0.16",
-    "@plumier/mongoose": "1.0.0-rc0.16",
-    "@plumier/serve-static": "1.0.0-rc0.16",
-    "@plumier/social-login": "1.0.0-rc0.16",
-    "@types/bcrypt": "^3.0.0",
+    "@plumier/jwt": "1.0.0-rc.1",
+    "@plumier/mongoose": "1.0.0-rc.1",
+    "@plumier/serve-static": "1.0.0-rc.1",
+    "@plumier/social-login": "1.0.0-rc.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/csrf": "^1.3.2",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^8.3.7",
-    "bcrypt": "^3.0.7",
+    "bcryptjs": "^2.4.3",
     "csrf": "^3.1.0",
     "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
-    "plumier": "1.0.0-rc0.16"
+    "plumier": "1.0.0-rc.1"
   },
   "devDependencies": {
     "@types/jest": "^24.9.1",
     "@types/supertest": "^2.0.8",
     "faker": "^4.1.0",
-    "jest": "^25.1.0",
+    "jest": "^24.9.0",
     "mongodb-memory-server-global": "^6.2.3",
     "supertest": "^4.0.2",
-    "ts-jest": "^25.0.0",
+    "ts-jest": "^24.1.0",
     "ts-node": "^8.6.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.7.5"
